--- a/index.html
+++ b/index.html
@@ -2,12 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Document</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+
 </head>
 <body>
+<h1>banana Music</h1>
+<div class="musicContainer">
+    <div class="musicInfo">
+        <h4 id="title">ramiz</h4>
+        <div class="progressContainer">
+            <div class="progress">
 
+            </div>
+        </div>
+    </div>
+
+    <audio id="audio" src="music/Rimaazz.mp3"></audio>
+
+    <div class="imageContainer">
+        <img alt="musicCover" id="cover" src="images/hey.jpg">
+    </div>
+    <div class="navigation">
+        <button class="action-btn" id="prev">
+            <i class="fas fa-backward"></i>
+        </button>
+        <button class="actionBtn actionBtnBig" id="play">
+            <i class="fas fa-play"></i>
+        </button>
+        <button class="action-btn" id="next">
+            <i class="fas fa-ward"></i>
+        </button>
+
+    </div>
+</div>
+<script src="main.js"></script>
 </body>
 </html>
