--- a/index.html
+++ b/index.html
@@ -11,31 +11,29 @@
 
 </head>
 <body>
-<h1>banana Music</h1>
-<div class="musicContainer">
+<h1>Banana Music</h1>
+<div class="musicContainer  ">
     <div class="musicInfo">
-        <h4 id="title">ramiz</h4>
+        <h4 id="title"></h4>
         <div class="progressContainer">
-            <div class="progress">
-
-            </div>
+            <div class="progress"></div>
         </div>
     </div>
 
-    <audio id="audio" src="music/Rimaazz.mp3"></audio>
+    <audio id="audio" src=""></audio>
 
     <div class="imageContainer">
-        <img alt="musicCover" id="cover" src="images/hey.jpg">
+        <img alt="musicCover" id="cover" src="">
     </div>
     <div class="navigation">
-        <button class="action-btn" id="prev">
+        <button class="actionBtn" id="prev">
             <i class="fas fa-backward"></i>
         </button>
         <button class="actionBtn actionBtnBig" id="play">
             <i class="fas fa-play"></i>
         </button>
-        <button class="action-btn" id="next">
-            <i class="fas fa-ward"></i>
+        <button class="actionBtn" id="next">
+            <i class="fas fa-forward"></i>
         </button>
 
     </div>
