--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <div class="addMusicContainer">
     <input id="addMusicInput" class="addInput" type="text" placeholder="Enter music name">
-    <button onclick="addMusic()">
+    <button class="addMusicBtn" onclick="addMusic()">
         add music
     </button>
 </div>
